fix: align with firefox

--- a/faster-pr-firefox/react-app/src/components/PreviewMD/PreviewMD.module.scss
+++ b/faster-pr-firefox/react-app/src/components/PreviewMD/PreviewMD.module.scss
@@ -1,4 +1,8 @@
 .wrapper {
     height: fit-content;
     min-height: 500px;
+
+    pre>code {
+        color: var(--color-fg-default);
+    }
 }
